--- a/ImageTrackingHtml/styles.css
+++ b/ImageTrackingHtml/styles.css
@@ -1,5 +1,6 @@
 ﻿body {
-    margin: 0
+    margin: 0;
+    font-size:10px;
 }
 
 .sheet-outer {
@@ -65,7 +66,7 @@ table{
     height: 20%;
     max-width: 33.33%;
     max-height: 20%;
-    text-align: center;
+    text-align: left;
     vertical-align: bottom;
 }
 .vertical-td {
@@ -73,6 +74,6 @@ table{
     height: 100%;
     max-width: 33.33%;
     max-height: 100%;
-    text-align: center;
+    text-align: left;
     vertical-align: bottom;
 }
